# La-gestoria

./: README.md
La-Gestoria/: gestortaxi.db  main.py  pyproject.toml
La-Gestoria/templates/: base.html  dashboard.html  landing.html  login.html  register.html
