[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pyjwt>=2.10.1",
    "requests>=2.32.4",
    "schedule>=1.2.2",
    "werkzeug>=3.1.3",
]
